add /sensors_hourly and /sensors_hourly/{date}
